objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Quality_Description__c</fullName>
        <formula>IF( Address_Quality_Score__c =100,&quot;All Address Details Captured&quot;, &quot;Missing: &quot; 
&amp;IF( LEN(MailingStreet) = 0, &quot;Street Address, &quot;,&quot;&quot;) 
&amp;IF( LEN(MailingState) = 0, &quot;State, &quot;,&quot;&quot;) 
&amp;IF( LEN(MailingPostalCode) = 0, &quot;Zip Code, &quot;,&quot;&quot;) 
&amp;IF( LEN(MailingCountry) = 0, &quot;Country, &quot;,&quot;&quot;))</formula>
        <label>Address Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Quality_Score__c</fullName>
        <formula>100 - 
IF( LEN(MailingStreet)= 0,30,0) - 
IF( LEN(MailingState)= 0,30,0) - 
IF( LEN(MailingPostalCode)= 0,30,0) - 
IF( LEN(MailingCountry)= 0,10,0)</formula>
        <label>Address Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>If customer has two email addresses, list secondary here.</description>
        <label>Alternate Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Customer__c</fullName>
        <label>CW Customer #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Gallery__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.

Values set by users/ stewards</description>
        <label>Closest Gallery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Store__c</fullName>
        <inlineHelpText>Assigned according to Transporatation Dept&apos;s &quot;air miles&quot; from zip to closest store. Where zip not indicated, assigned to store 000. 041811LALO</inlineHelpText>
        <label>Closest Store</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_Mailing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked we will not send new Account information to Experian for Consumer mailings.</description>
        <label>Consumer Mailing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Indicator__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <formula>IF(IsPersonAccount, IMAGE(&quot;/resource/AccountIndicatorIcons/PersonAccount.png&quot;, &quot;Person Account&quot;, 30, 30), IMAGE(&quot;/resource/AccountIndicatorIcons/BusinessContact.png&quot;, &quot;Business Contact&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Owned_Customer_Display__c</fullName>
        <formula>IF( Corporate_Owned_Customer__c = TRUE, IMAGE(&apos;/resource/1477579338000/CorporateOwnedCustomer&apos;,&quot;&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Owned Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Owned_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use by the Corporate CSC team to identify customers who are being serviced by that team.</description>
        <label>Corporate Owned Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code_For_SSV__c</fullName>
        <description>This field maps mailing country names to the 2 digit country code to ensure matching is performed correctly when contacts are loaded to Source System View to match against CW customers</description>
        <formula>CASE( MailingCountry 
, &quot;USA&quot;,&quot;US&quot;
, &quot;Canada&quot;,&quot;CA&quot;
, &quot;Mexico&quot;,&quot;ME&quot;
, &quot;CAN&quot;,&quot;CA&quot;
, &quot;United Kingdom&quot;,&quot;UK&quot;
, &quot;United States&quot;,&quot;US&quot;
, &quot;Australia&quot;,&quot;AU&quot;
, &quot;UAE&quot;,&quot;AE&quot;
, &quot;Brazil&quot;,&quot;BR&quot;
, &quot;Bahamas&quot;,&quot;BS&quot;
, &quot;Hong Kong&quot;,&quot;HK&quot;
, &quot;Russia&quot;,&quot;RU&quot;
, &quot;MEX&quot;,&quot;ME&quot;
, &quot;China&quot;,&quot;CN&quot;
, &quot;Bermuda&quot;,&quot;BM&quot;
, &quot;Japan&quot;,&quot;JP&quot;
, &quot;Singapore&quot;,&quot;SG&quot;
, &quot;Costa Rica&quot;,&quot;CR&quot;
, &quot;MX&quot;,&quot;ME&quot;
, &quot;Switzerland&quot;,&quot;CH&quot;
, &quot;New Zealand&quot;,&quot;NZ&quot;
, &quot;France&quot;,&quot;FR&quot;
, &quot;India&quot;,&quot;IN&quot;
, &quot;England&quot;,&quot;UK&quot;
, &quot;Argentina&quot;,&quot;AR&quot;
, &quot;Germany&quot;,&quot;DE&quot;
, &quot;Italy&quot;,&quot;IT&quot;
, LEFT(MailingCountry,2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code For SSV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name_for_SSV__c</fullName>
        <description>This formula field maps the most commonly occurring country codes &amp; abbreviations to the relevant country name. This ensures any contact data sent to Source System View for matching against CW customers contains valid information.</description>
        <formula>CASE(MailingCountry
, &quot;US&quot;,&quot;United States&quot;
, &quot;USA&quot;,&quot;United States&quot;
, &quot;CA&quot;,&quot;Canada&quot;
, &quot;CAN&quot;,&quot;Canada&quot;
, &quot;MX&quot;,&quot;Mexico&quot;
, &quot;ME&quot;,&quot;Mexico&quot;
, &quot;UK&quot;,&quot;United Kingdom&quot;
, &quot;CN&quot;,&quot;China&quot;
, &quot;AU&quot;,&quot;Australia&quot;
, &quot;IT&quot;,&quot;Italy&quot;
, &quot;NZ&quot;,&quot;New Zealand&quot;
, &quot;HK&quot;,&quot;Hong Kong&quot;
, &quot;RU&quot;,&quot;Russia&quot;
, &quot;CH&quot;,&quot;Switzerland&quot;
, &quot;JP&quot;,&quot;Japan&quot;
, MailingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name for SSV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMS_Customer__c</fullName>
        <description>For ease of placing orders &amp; reducing duplicate customerss</description>
        <externalId>true</externalId>
        <label>DMMS Customer#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Architecture/Construction</fullName>
                </value>
                <value>
                    <fullName>Concept Development</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Furn Fixt &amp; Equip</fullName>
                </value>
                <value>
                    <fullName>Interior Design</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Op Supp &amp; Equip</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_Set_ID__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.

This field will be used as a primary match for Demand Tools duplicate matching/ stewardship review</description>
        <label>Duplicate Set ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Set_Number_Business_Contact__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <formula>Value(if(isnumber( Duplicate_Set_ID__c), Duplicate_Set_ID__c, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Set Number Business Contact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Additional1__c</fullName>
        <label>Email Additional1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Additional2__c</fullName>
        <label>Email Additional2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Additional1__c</fullName>
        <label>Fax Additional1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Additional2__c</fullName>
        <label>Fax Additional2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name_Additional1__c</fullName>
        <label>First Name Additional1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Additional2__c</fullName>
        <label>First Name Additional2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Warning__c</fullName>
        <formula>Account.Fraud_Warning__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraud Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grey_Card__c</fullName>
        <formula>IF(Has_Membership__c = TRUE ,IMAGE(&apos;resource/1476295404000/RHMember&apos;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RH Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Membership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFA_AV__Mailing_Address_Validation_Status__c</fullName>
        <defaultValue>&quot;Not Verified&quot;</defaultValue>
        <label>Mailing Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV__Other_Address_Validation_Status__c</fullName>
        <defaultValue>&quot;Not Verified&quot;</defaultValue>
        <label>Other Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Person_of_Influence__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <formula>!ISBLANK(Person_of_Influence_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Person of Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Person_of_Interest__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <formula>!ISBLANK(Person_of_Interest_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Person of Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Additional1__c</fullName>
        <label>Last Name Additional1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Additional2__c</fullName>
        <label>Last Name Additional2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Not used in Contact or Person Account page layouts.</description>
        <label>Maiden Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <label>Mailing Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_ID__c</fullName>
        <description>Grey Card membership number</description>
        <label>Membership ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Member_Num__c</fullName>
        <label>Original Member Num</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Client_Types__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Not used in Person Account or Contact page layouts.</description>
        <label>Other Client Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Celebrity</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarder</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail Customer</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_of_Influence_Type__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <label>Person of Influence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOD</fullName>
                </value>
                <value>
                    <fullName>RH Executive</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Celebrity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_of_Interest_Discount__c</fullName>
        <label>Person of Interest Discount</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_of_Interest_Type__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <label>Person of Interest Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOD</fullName>
                </value>
                <value>
                    <fullName>RH Executive</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Celebrity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Additional1__c</fullName>
        <label>Phone Additional1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Additional2__c</fullName>
        <label>Phone Additional2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <inlineHelpText>Enter the extension for the primary phone number, if any.  Enter only dial numbers (exclude &quot;x&quot; or &quot;ext&quot;</inlineHelpText>
        <label>Phone Extension</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <inlineHelpText>Ex: DRS,Scheduling,Dock Search etc</inlineHelpText>
        <label>Point of Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_City_State__c</fullName>
        <description>Created for use with the MDM project. Concatenates mailing address fields in order to display full address in search results.</description>
        <formula>IF(!isblank(MailingCity),MailingCity + &quot;, &quot;,&quot;&quot;) +
MailingState + &quot; &quot; +  MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary City/ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Type__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Not used in Person Account or Contact page layouts.</description>
        <label>Primary Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Retail Customer</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_Employee_Number__c</fullName>
        <label>Referred Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stewardship_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for use with the MDM project by Traction on Demand. This field is not in use because it does not work as it is currently designed.</description>
        <label>Stewardship Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stewardship_Indicator__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is not in use because it does not work as it is currently designed.</description>
        <formula>IF(Stewardship_Approved__c, IMAGE(&quot;/resource/StewardshipIcons/Approval_icon.png&quot;, &quot;Approved&quot;, 30, 30),
IMAGE(&quot;/resource/StewardshipIcons/Pending_icon.png&quot;, &quot;Pending&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stewardship Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stewardship_Priority__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is not in use because it does not work as it is currently designed.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stewardship Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Display__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <formula>Tier_Name__c &amp; &quot; &quot; &amp; Tier_Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Icon__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <formula>IF(Tier_Name__c = &quot;Top Tier&quot;, IMAGE(&quot;/resource/TierIcons/GoldBadge.png&quot;, &quot;Top Tier&quot;, 30, 30), 

IF(Tier_Name__c = &quot;Tier 2&quot;, IMAGE(&quot;/resource/TierIcons/GrayBadge.png&quot;, &quot;Tier 2&quot;, 30, 30), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Name__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <formula>IF(Total_Lifetime_Value__c &gt;= 75000 || Is_Person_of_Interest__c, &quot;Top Tier&quot;,
IF(Total_Lifetime_Value__c &gt;= 10000, &quot;Tier 2&quot;,
IF(Total_Lifetime_Value__c &gt;= 500, &quot;Tier 3&quot;,
&quot;Tier 4&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Additional1__c</fullName>
        <label>Title Additional1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Additional2__c</fullName>
        <label>Title Additional2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Aggregate_Influence_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.

Sum of all Orders where the person (including all related Business Contacts and Person Accounts who are tracked as the “Same Person”) is the Sold To OR Ship To OR Influencer.</description>
        <inlineHelpText>Purchases influenced by the person both personally and while representing a company.</inlineHelpText>
        <label>Aggregate Influence Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Business_Contact_Influence_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1. Sum of value of Orders where the Business Contact is the Sold To OR Ship To OR Influencer (Manually managed Order Roles for Affiliated Person, RH Designer, Non RH Designer, Freight Forwarder)</description>
        <inlineHelpText>Purchases influenced by the person on behalf of a company through relationships to an order (e.g. as a design professional at a design company)</inlineHelpText>
        <label>Total Business Contact Influence Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Business_Contact_Lifetime_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Not using this field on page layouts because this field references Total Lifetime Value, and for consistency, we decided to use Total Lifetime Value for Contacts and Person Accounts.</description>
        <formula>IF(!IsPersonAccount, Total_Lifetime_Value__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total purchases made by this contact acting under the related Business Account/Organization</inlineHelpText>
        <label>Total Business Contact Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand.</description>
        <inlineHelpText>Lifetime revenue for this contact (where the contact was the Billing name on the order)</inlineHelpText>
        <label>Total Lifetime Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Personal_Influence_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Sum of value of Orders where the Person Account is the Sold To OR Ship To OR Influencer (Manually managed Order Roles for Affiliated Person, RH Designer, Non RH Designer, Freight Forwarder).</description>
        <inlineHelpText>Purchases influenced by the person through relationships to an order (e.g. as an affiliated person)</inlineHelpText>
        <label>Total Personal Influence Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Personal_Lifetime_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Not using this field on page layouts because this field references Total Lifetime Value, and for consistency, we decided to use Total Lifetime Value for Contacts and Person Accounts.</description>
        <formula>IF(IsPersonAccount, Total_Lifetime_Value__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total purchases made by this person</inlineHelpText>
        <label>Total Personal Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unauthorized_Contact_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the Contact is no longer an approved Contact on this Account</inlineHelpText>
        <label>Unauthorized Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unauthorized_Contact_Display__c</fullName>
        <formula>IF( Unauthorized_Contact_Checkbox__c = TRUE, 
IMAGE(&quot;resource/1468367621000/Stop_Sign&quot;, &quot;NOT VALID&quot;, 24, 24), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unauthorized Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>Bertha</value>
        </filters>
        <label>Bertha</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Gary Swabb</label>
    </listViews>
    <listViews>
        <fullName>CitySearch</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closest_Store__c</field>
            <operation>equals</operation>
            <value>133</value>
        </filters>
        <label>City Search</label>
    </listViews>
    <listViews>
        <fullName>City_Search</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closest_Store__c</field>
            <operation>equals</operation>
            <value>133</value>
        </filters>
        <label>City Search</label>
    </listViews>
</CustomObject>